# trade_volume_prediction

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  presentation.md  pyproject.toml
data/: 10YBONDYIELDS.csv  EURUSD.csv  GOLD.csv  SP500.csv  VIX.csv  VOLUMES.csv
models/: xgboost_pipeline_v1.pkl
notebooks/: 2-experiments.ipynb  3-experiments-statsmodel.ipynb  3-model-comparisons.ipynb  EDA.ipynb  experiments.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
requirements/: requirements.txt  requirements_dev.txt
src/: app.py  config.py  predict.py  train.py  utils.py
src/etl/: extract.py  transform.py
src/model/: model.py
